spices/raylib/tests/errors/image-width-mismatch.tur
;; U4 negative: an (Image w h) carries its width in the type, so image-overlay
;; -- which shares the size variable `w` across both operands -- rejects a
;; width mismatch at compile time. No runtime shape check, no blit past the end
;; of a row: a 64-wide sprite cannot be composited onto a 32-wide one.
;;
;;   tur check tests/errors/image-width-mismatch.tur
;;   => error [TUR-E0260]: sized type mismatch: function 'image-overlay' shares
;;      size variable 'w' across parameters, but argument 1 has size 64 while
;;      argument 2 has size 32
;;
;; The check is always on (it does not need -Xsized-types). Like the
;; linalg/sized and rtaudio/buffer error fixtures this lives outside the flat
;; `tur test tests` run, so it documents the guarantee without breaking CI.

(load "stdlib/sized.tur")

(defmodule image_width_mismatch_test
  (import raylib/image :refer [Image image-blank image-overlay]))

(defn wide   [] : (Image (Static 64) (Static 64)) (image-blank 64 64))
(defn narrow [] : (Image (Static 32) (Static 64)) (image-blank 32 64))

(defn bad-overlay [] : (Image (Static 64) (Static 64))
  (image-overlay (wide) (narrow)))   ;; ERROR TUR-E0260: width 64 vs 32
